--- a/.github/workflows/zn-m2.yml
+++ b/.github/workflows/zn-m2.yml
@@ -15,6 +15,14 @@ name: zn-m2 build
 on:
   repository_dispatch:
   workflow_dispatch:
+    inputs:
+      ssh:
+        description: 'SSH connection to Actions'
+        required: false
+        default: false
+        type: boolean
+  schedule:
+    - cron: 0 8 * * 2
 permissions:
   contents: write
   actions: write
@@ -80,6 +88,13 @@ jobs:
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
+    - name: Enable ccache
+      uses: klever1988/cachewrtbuild@main
+      with:
+        ccache: 'true'
+        mixkey: 'znm2-4460'
+        prefix: ${{ github.workspace }}/openwrt
+
     - name: Load custom feeds
       run: |
         set -x
@@ -100,6 +115,24 @@ jobs:
 
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
+    
+    - name: Upgrade some application version
+      run: |
+        cd openwrt
+        rm -rf feeds/packages/net/{xray-core,v2ray-core,v2ray-geodata,sing-box,frp,smartdns,zerotier,natmap,ddns-go,tcping}
+        rm -rf feeds/luci/luci-app-frp*
+        rm -rf feeds/packages/utils/{zoneinfo,ttyd}
+        rm -rf feeds/packages/libs/libwebsockets
+        wget -r -np -nH --cut-dirs=4 -P feeds/packages/net/ https://cdn.jsdelivr.net/gh/immortalwrt/packages@master/net/tcping/ && find feeds/packages/net/tcping -type f -name "index.html*" -exec rm {} \;
+        wget -r -np -nH --cut-dirs=4 -P feeds/packages/net/ https://cdn.jsdelivr.net/gh/immortalwrt/packages@master/net/natmap/ && find feeds/packages/net/natmap -type f -name "index.html*" -exec rm {} \;
+        wget -r -np -nH --cut-dirs=4 -P feeds/packages/net/ https://cdn.jsdelivr.net/gh/immortalwrt/packages@master/net/ddns-go/ && find feeds/packages/net/ddns-go -type f -name "index.html*" -exec rm {} \;
+        wget -r -np -nH --cut-dirs=4 -P feeds/packages/net/ https://cdn.jsdelivr.net/gh/immortalwrt/packages@master/net/smartdns/ && find feeds/packages/net/smartdns -type f -name "index.html*" -exec rm {} \;
+        wget -r -np -nH --cut-dirs=4 -P feeds/packages/utils/ https://cdn.jsdelivr.net/gh/immortalwrt/packages@master/utils/zoneinfo/ && find feeds/packages/utils/zoneinfo -type f -name "index.html*" -exec rm {} \;
+        wget -r -np -nH --cut-dirs=4 -P feeds/packages/utils/ https://cdn.jsdelivr.net/gh/immortalwrt/packages@master/utils/ttyd/ && find feeds/packages/utils/ttyd -type f -name "index.html*" -exec rm {} \;
+        wget -r -np -nH --cut-dirs=4 -P feeds/packages/libs/ https://cdn.jsdelivr.net/gh/immortalwrt/packages@master/libs/libwebsockets/ && find feeds/packages/libs/libwebsockets -type f -name "index.html*" -exec rm {} \;
+
+        rm -rf feeds/packages/lang/golang
+        git clone https://github.com/sbwml/packages_lang_golang -b 24.x feeds/packages/lang/golang
 
     - name: Load custom configuration
       run: |
