--- a/config/zn-m2.config
+++ b/config/zn-m2.config
@@ -252,6 +252,7 @@ CONFIG_KERNEL_IPV6_MROUTE=y
 # CONFIG_KERNEL_NFS_V3_ACL_SUPPORT is not set
 # CONFIG_KERNEL_NFSD_V2_ACL_SUPPORT is not set
 # CONFIG_KERNEL_NFSD_V3_ACL_SUPPORT is not set
+CONFIG_KERNEL_NFSD_PNFS=y
 # CONFIG_KERNEL_REISER_FS_POSIX_ACL is not set
 # CONFIG_KERNEL_XFS_POSIX_ACL is not set
 # CONFIG_KERNEL_JFS_POSIX_ACL is not set
