--- a/config/zn-m2.config
+++ b/config/zn-m2.config
@@ -6010,7 +6010,7 @@ CONFIG_PACKAGE_uboot-envtools=y
 # Compression
 #
 # CONFIG_PACKAGE_7z is not set
-# CONFIG_PACKAGE_7zz is not set
+CONFIG_PACKAGE_7zz=y
 # CONFIG_PACKAGE_bsdtar is not set
 # CONFIG_PACKAGE_bsdtar-noopenssl is not set
 # CONFIG_PACKAGE_bzip2 is not set
