--- a/config/zn-m2.config
+++ b/config/zn-m2.config
@@ -4178,7 +4178,6 @@ CONFIG_PACKAGE_luci-app-ksmbd=y
 # CONFIG_PACKAGE_luci-app-mwol is not set
 # CONFIG_PACKAGE_luci-app-n2n_v2 is not set
 # CONFIG_PACKAGE_luci-app-naiveproxy is not set
-CONFIG_PACKAGE_luci-app-natmap=y
 # CONFIG_PACKAGE_luci-app-netdata is not set
 # CONFIG_PACKAGE_luci-app-nfs is not set
 # CONFIG_PACKAGE_luci-app-nft-qos is not set
@@ -4438,6 +4437,7 @@ CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-bonding-en is not set
 CONFIG_PACKAGE_luci-i18n-bonding-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-cpufreq-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ddns-go-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-ddns-go-zh_Hans is not set
 CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-firewall-ca is not set
@@ -4497,18 +4497,6 @@ CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-ksmbd-en is not set
 # CONFIG_PACKAGE_luci-i18n-ksmbd-es is not set
 CONFIG_PACKAGE_luci-i18n-ksmbd-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-natmap-cs is not set
-# CONFIG_PACKAGE_luci-i18n-natmap-da is not set
-# CONFIG_PACKAGE_luci-i18n-natmap-de is not set
-# CONFIG_PACKAGE_luci-i18n-natmap-es is not set
-# CONFIG_PACKAGE_luci-i18n-natmap-it is not set
-# CONFIG_PACKAGE_luci-i18n-natmap-pl is not set
-# CONFIG_PACKAGE_luci-i18n-natmap-pt_BR is not set
-# CONFIG_PACKAGE_luci-i18n-natmap-ru is not set
-# CONFIG_PACKAGE_luci-i18n-natmap-sv is not set
-# CONFIG_PACKAGE_luci-i18n-natmap-tr is not set
-# CONFIG_PACKAGE_luci-i18n-natmap-zh_Hans is not set
-# CONFIG_PACKAGE_luci-i18n-natmap-zh_Hant is not set
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-passwall-zh_Hans is not set
 CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=y
@@ -5571,7 +5559,7 @@ CONFIG_PACKAGE_libipset=y
 # CONFIG_PACKAGE_mtr-json is not set
 # CONFIG_PACKAGE_mtr-nojson is not set
 # CONFIG_PACKAGE_mwol is not set
-CONFIG_PACKAGE_natmap=y
+# CONFIG_PACKAGE_natmap is not set
 # CONFIG_PACKAGE_nbd is not set
 # CONFIG_PACKAGE_nbd-server is not set
 # CONFIG_PACKAGE_ncp is not set
