--- a/.github/workflows/zn-m2.yml
+++ b/.github/workflows/zn-m2.yml
@@ -93,7 +93,7 @@ jobs:
       with:
         ccache: 'true'
         mixkey: 'znm2-4460'
-        prefix: '/home/runner/work/zn-m2-openwrt-build-4.4/openwrt'
+        prefix: '/workdir/openwrt'
 
     - name: Load custom feeds
       run: |
